Fixed issue on Reg14.html
Updated reg14.html with the fix for the issue where it caused a 404 when clicking the reg14 nav link while on the reg14 page.

--- a/reg14.html
+++ b/reg14.html
@@ -25,7 +25,7 @@
             <a class="nav-link" href="evidence.html">Documentation</a>
           </li>
 		  <li class="nav-item">
-            <a class="nav-link" href="Reg14.html">REG 14<span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="reg14.html">REG 14<span class="sr-only">(current)</span></a>
           </li>
           </li>
         </ul>
