Updates to the Reg14 pages
Updated Reg 14 pages following some of the suggestions from the rest of the team.
Includes changing all links to say 'Pre Submission Plan (Reg 14) now instead of the shorter Reg 14.
Change to the Reg 14 banner similar to above.
Not updated here, but updated file for Summary.

--- a/evidence.html
+++ b/evidence.html
@@ -16,7 +16,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="index.html">Home</a>
           </li>
 		  <li class="nav-item">
             <a class="nav-link" href="about.html">About Us</a>
@@ -25,7 +25,7 @@
             <a class="nav-link" href="evidence.html">Documentation<span class="sr-only">(current)</span></a>
           </li>
 		  <li class="nav-item">
-            <a class="nav-link" href="reg14.html">REG 14</a>
+            <a class="nav-link" href="reg14.html">Pre-submission Consultation (Reg 14)</a>
           </li>
         </ul>
       </div>
