--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <a class="nav-link" href="evidence.html">Documentation</a>
           </li>
 		  <li class="nav-item">
-            <a class="nav-link" href="reg14.html">REG 14</a>
+            <a class="nav-link" href="reg14.html">Pre-submission Consultation (Reg 14)</a>
           </li>
         </ul>
       </div>
@@ -34,7 +34,7 @@
 	<div class="container" style="background-color: yellow">
 	 <div class="row">
 	  <div class="col-12 text-center">
-		<h1><a class="nav-link" href="reg14.html">REG 14 - Have your say! Click Here for more Info</a></h1>
+		<h1><a class="nav-link" href="reg14.html">Pre-submission Consultation (Reg 14) - Have your say! Click Here for more Info</a></h1>
 	  </div>
 	 </div>
 	</div>
