--- a/reg14.html
+++ b/reg14.html
@@ -25,7 +25,7 @@
             <a class="nav-link" href="evidence.html">Documentation</a>
           </li>
 		  <li class="nav-item">
-            <a class="nav-link" href="reg14.html">REG 14<span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="reg14.html">Pre-submission Consultation (Reg 14)<span class="sr-only">(current)</span></a>
           </li>
           </li>
         </ul>
@@ -46,8 +46,8 @@
       <div class="container">
         <div class="row">
           <div class="col-12 text-center">
-            <h1>Reg 14</h1>
-            <p>This page is home to all of our Reg 14 Documentation<br />Below you will also find links to the Questionnaire, Pre-Submission plan and other useful information</p>
+            <h1>Pre-submission Consultation (Reg 14)</h1>
+            <p>This page is home to all of our Pre-submission Consultation (Reg 14) Documentation<br />Below you will also find links to the Questionnaire, Pre-Submission plan and other useful information</p>
           </div>
         </div>
       </div>
@@ -69,7 +69,7 @@
 					<br />
                   <p>Download the Paper version and submit at the shop</p>
 					<ul>
-						<li><a href="/documents/reg14/LMNP_paper_reg14_comments_form.pdf">LMNP Reg 14 Paper Form</a></li>
+						<li><a href="/documents/reg14/LMNP_paper_reg14_comments_form.pdf">Pre-submission Consultation Paper Form</a></li>
 					</ul>
                 </div>
               </li>
