--- a/evidence.html
+++ b/evidence.html
@@ -56,17 +56,20 @@
     <section>
       <div class="container mt-2">
         <div class="row">
-          <div class="col-md-4 col-12">
+		 <div class="col-md-4 col-12">
             <ul class="list-unstyled">
               <li class="media">
-                <img class="mr-3" src="images/35X35.gif" alt="Generic placeholder image">
+                <img class="mr-3" src="images/LMNPLogo35x35.png" alt="Generic placeholder image">
                 <div class="media-body">
-                  <h5 class="mt-0 mb-1">Minutes from meetings</h5>
-                  <p>Here are the minutes from our meetings:</p>
+                  <h5 class="mt-0 mb-1">Marston Sicca Area Boundaries</h5>
+                  <p>Links to all documentation pertaining to the Marston Sicca Area Boundaries</p>
 					<ul>
-						<li><a href="documents/minutes/Minutes_LMNPSG_11_September_18.pdf">LMNP Minutes September 18</a></li>
-						<li><a href="documents/minutes/Minutes_LMNPSG_15_August_2018.pdf">LMNP Minutes August 18</a></li>
-						<li><a href="documents/minutes/Minutes_LMNPSG_18_July_18.pdf">LMNP Minutes July 18</a></li>
+						<li><a href="documents/areaboundary/Marston_Sicca-official_boundary_map.pdf">Marston Sicca Offical Boundary Map</a></li>
+						<li><a href="documents/areaboundary/Marston_Sicca_Application_letter-original.pdf">Marston Sicca Application letter - Original</a></li>
+						<li><a href="documents/areaboundary/Marston_Sicca_NDP_Area_Application-Nov2016.pdf">Marston Sicca Area Application</a></li>
+						<li><a href="documents/areaboundary/Marston_Sicca_NDP_area_designation-2016confirmation.pdf">Marston Sicca Area Designation Confirmation 2016</a></li>
+						<li><a href="documents/areaboundary/Marston_Sicca_NDP_Area_Map-Dec2016.pdf">Marston Sicca Area Map - Dec 2016</a></li>
+						<li><a href="documents/areaboundary/Marston_Sicca_NDP_area_report_2016-LeaderofCouncil.pdf">Marston Sicca Area Report 2016</a></li>
 					</ul>
                 </div>
               </li>
@@ -75,7 +78,7 @@
           <div class="col-md-4 col-12">
             <ul class="list-unstyled">
               <li class="media">
-                <img class="mr-3" src="images/35X35.gif" alt="Generic placeholder image">
+                <img class="mr-3" src="images/LMNPLogo35x35.png" alt="Generic placeholder image">
                 <div class="media-body">
                   <h5 class="mt-0 mb-1">NP Questionnaire</h5>
                   <p>Here are all the top line results from the questionnaire:</p>
@@ -97,10 +100,77 @@
               </li>
             </ul>
           </div>
+		  <div class="col-md-4 col-12">
+            <ul class="list-unstyled">
+              <li class="media">
+                <img class="mr-3" src="images/LMNPLogo35x35.png" alt="Generic placeholder image">
+                <div class="media-body">
+                  <h5 class="mt-0 mb-1">Public Engagement</h5>
+                  <p>November 2017</p>
+					<ul>
+						<li><a href="documents/public_engagement/Nov_2017/LongMarstonNeighbourhood_Open_Day_25-11-17.pdf">LMNP Open Day</a></li>
+					</ul>
+				  <p>April 2018</p>
+					<ul>
+						<li><a href="documents/public_engagement/Apr_2018/Steering_group_membership_form.pdf">Steering group Membership Form</a></li>
+						<li><a href="documents/public_engagement/Apr_2018/Public_engagement_meeting22Apr18results.pdf">Public Engagement Meeting Results</a></li>
+						<li><a href="documents/public_engagement/Apr_2018/NP_presentation_getting_startedv3.pdf">NP Getting Starter Presentation</a></li>
+						<li><a href="documents/public_engagement/Apr_2018/NP_later_stages_presentation_MattNeale.pdf">NP Later Stages Presentation - Matt Neale</a></li>
+					</ul>
+				  <p>October 2018</p>
+					<ul>
+						<li><a href="documents/public_engagement/Oct_2018/Engagement_meeting_17Oct2018.pdf">Engagement MeetingOct 2018</a></li>
+						<li><a href="documents/public_engagement/Oct_2018/Suggestions_Form.pdf">Suggestions Form</a></li>
+						<li><a href="documents/public_engagement/Oct_2018/Neighbourhood_plan_process_condensed.pdf">LMNP Process Condensed</a></li>
+						<li><a href="documents/public_engagement/Oct_2018/Neighbourhood_Plan_Process_Progress.pdf">LMNP Process Progress</a></li>
+					</ul>
+				  <p>October 2019</p>
+					<ul>
+						<li><a href="documents/public_engagement/Oct_2019/Post_Survey_Engagement_meeting_13thOct2019.pdf">Post Survey Engagement Meeting</a></li>
+					</ul>
+                </div>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+	 <div class="container mt-2">
+        <div class="row">
           <div class="col-md-4 col-12">
             <ul class="list-unstyled">
               <li class="media">
-                <img class="mr-3" src="images/35X35.gif" alt="Generic placeholder image">
+                <img class="mr-3" src="images/LMNPLogo35x35.png" alt="Generic placeholder image">
+                <div class="media-body">
+                  <h5 class="mt-0 mb-1">SEA Screening</h5>
+                  <p>Documents relating to our Strategic Enviromental Assessment Screening</p>
+					<ul>
+						<li><a href="documents/sea_screening/LC-779_Long_Marston_NDP_SEA_HRA_Screening_9_160522LB_compressed.pdf">LMNP SEA Screening</a></li>
+						<li><a href="documents/sea_screening/LongMarstonNDP_SEAScreening_SDC_conclusion_170522.pdf">LMNP SEA Screening SDC Conclusion</a></li>
+					</ul>
+                </div>
+              </li>
+            </ul>
+          </div>
+		  <div class="col-md-4 col-12">
+            <ul class="list-unstyled">
+              <li class="media">
+                <img class="mr-3" src="images/LMNPLogo35x35.png" alt="Generic placeholder image">
+                <div class="media-body">
+                  <h5 class="mt-0 mb-1">Minutes from meetings</h5>
+                  <p>Here are the minutes from our meetings:</p>
+					<ul>
+						<li><a href="documents/minutes/Minutes_LMNPSG_11_September_18.pdf">LMNP Minutes September 18</a></li>
+						<li><a href="documents/minutes/Minutes_LMNPSG_15_August_2018.pdf">LMNP Minutes August 18</a></li>
+						<li><a href="documents/minutes/Minutes_LMNPSG_18_July_18.pdf">LMNP Minutes July 18</a></li>
+					</ul>
+                </div>
+              </li>
+            </ul>
+          </div>
+		  <div class="col-md-4 col-12">
+            <ul class="list-unstyled">
+              <li class="media">
+                <img class="mr-3" src="images/LMNPLogo35x35.png" alt="Generic placeholder image">
                 <div class="media-body">
                   <h5 class="mt-0 mb-1">Miscellaneous</h5>
                   <p>Here are all the top line results from the questionnaire:</p>
