--- a/about.html
+++ b/about.html
@@ -251,7 +251,7 @@
         <div class="row">
           <div class="col-12 text-center">
             <h1>Want to help?!</h1>
-            <p>We apprecaite any and all volunteers to help us build this plan, we need help with anythign from delivering flyers, answering surveys, helping write up the plan and even helping design flyers. <br />Importantly, we really need your pictures of the village so we can include them both on the website and the final plan to show off our amazing village and that we want to keep it the way it is! Please send your pictures into the email below.</p>
+            <p>We apprecaite any and all volunteers to help us build this plan, we need help with anything from delivering flyers, answering surveys, helping write up the plan and even helping design flyers. <br />Importantly, we really need your pictures of the village so we can include them both on the website and the final plan to show off our amazing village and that we want to keep it the way it is! Please send your pictures into the email below.</p>
           </div>
         </div>
       </div>
