Fixed Linking Issue
Fixed a linking issue for one of the documents and also updated a few spelling/grammatical errors.

--- a/evidence.html
+++ b/evidence.html
@@ -114,7 +114,7 @@
 					<ul>
 						<li><a href="documents/public_engagement/Apr_2018/Steering_group_membership_form.pdf">Steering group Membership Form</a></li>
 						<li><a href="documents/public_engagement/Apr_2018/Public_engagement_meeting22Apr18results.pdf">Public Engagement Meeting Results</a></li>
-						<li><a href="documents/public_engagement/Apr_2018/NP_presentation_getting_startedv3.pdf">NP Getting Starter Presentation</a></li>
+						<li><a href="documents/public_engagement/Apr_2018/NP_presentation_getting_startedv3.pdf">NP Getting Started Presentation</a></li>
 						<li><a href="documents/public_engagement/Apr_2018/NP_later_stages_presentation_MattNeale.pdf">NP Later Stages Presentation - Matt Neale</a></li>
 					</ul>
 				  <p>October 2018</p>
