Reg 14 missing link
Missed a link of on the Reg 14 page so have updated this accordingly.

--- a/reg14.html
+++ b/reg14.html
@@ -59,12 +59,12 @@
           <div class="col-md-4 col-12">
             <ul class="list-unstyled">
               <li class="media">
-                <img class="mr-3" src="images/35X35.gif" alt="Generic placeholder image">
+                <img class="mr-3" src="images/LMNPLogo35x35.png" alt="Generic placeholder image">
                 <div class="media-body">
                   <h5 class="mt-0 mb-1">Have your Say</h5>
                   <p>Use the below link to submit your views online</p>
 					<ul>
-						<li><a href="https://docs.google.com/forms/d/e/1FAIpQLSfkb_j5-zQq3YEc9x2jPqzWXUqbJ7SDuWinOwaF1IqKn9nitg/viewform?usp=sf_link">Submit Online via Google Forms</a></li>
+						<li><a href="https://docs.google.com/forms/d/e/1FAIpQLSfkb_j5-zQq3YEc9x2jPqzWXUqbJ7SDuWinOwaF1IqKn9nitg/viewform?usp=sf_link">Submit online via Google Forms</a></li>
 					</ul>
 					<br />
                   <p>Download the Paper version and submit at the shop</p>
@@ -78,7 +78,7 @@
           <div class="col-md-4 col-12">
             <ul class="list-unstyled">
               <li class="media">
-                <img class="mr-3" src="images/35X35.gif" alt="Generic placeholder image">
+                <img class="mr-3" src="images/LMNPLogo35x35.png" alt="Generic placeholder image">
                 <div class="media-body">
                   <h5 class="mt-0 mb-1">Pre-Submission Plan</h5>
                   <p>Use the links below to view the Pre-Submission plan</p>
@@ -95,7 +95,7 @@
           <div class="col-md-4 col-12">
             <ul class="list-unstyled">
               <li class="media">
-                <img class="mr-3" src="images/35X35.gif" alt="Generic placeholder image">
+                <img class="mr-3" src="images/LMNPLogo35x35.png" alt="Generic placeholder image">
                 <div class="media-body">
                   <h5 class="mt-0 mb-1">Miscellaneous</h5>
                   <p>Here are a few other documents related to Reg 14</p>
