Index.html Change
Have updated the news section on the index.html page as it contained some out of date news.
Have re-written and now has correct information again.

--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
                 <img class="mr-3" src="images/LMNPLogo35x35.png" alt="Generic placeholder image">
                 <div class="media-body">
                   <h4 class="mt-0 mb-1">News</h4>
-				  <p>We are hosting an open day at the Long Marston Village Hall on 13th October 11am-1pm to view the Survey results!</p>
-                  <p>We had an great 171 responses from you all. The topline results can be <a href="documents/questionnaire/Long Marston Neighbourhood Plan Survey 2019 Topline Results.pdf">found here</a></p>
+				  <p>We are now ready to start Regulation 14 and need your thoughts!</p>
+          <p>Head over to the<a href="reg14.html">REG 14 Page here</a> or alternatively come along to an open day at the Long Marston Village Hall 6th June 7pm-9pm and 11th June 10am-12:30pm! </p>
                 </div>
               </li>
             </ul>
