--- a/about.html
+++ b/about.html
@@ -55,53 +55,8 @@
     </section>
 	<br />
 	<br />
-    <!--<section>
-      <div class="container mt-2">
-        <div class="row">
-          <div class="col-md-4 col-12">
-            <ul class="list-unstyled">
-              <li class="media">
-                <img class="mr-3" src="images/35X35.gif" alt="Generic placeholder image">
-                <div class="media-body">
-                  <h5 class="mt-0 mb-1">List-based media object</h5>
-                  Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin.
-                </div>
-              </li>
-            </ul>
-          </div>
-          <div class="col-md-4 col-12">
-            <ul class="list-unstyled">
-              <li class="media">
-                <img class="mr-3" src="images/35X35.gif" alt="Generic placeholder image">
-                <div class="media-body">
-                  <h5 class="mt-0 mb-1">List-based media object</h5>
-                  Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin.
-                </div>
-              </li>
-            </ul>
-          </div>
-          <div class="col-md-4 col-12">
-            <ul class="list-unstyled">
-              <li class="media">
-                <img class="mr-3" src="images/35X35.gif" alt="Generic placeholder image">
-                <div class="media-body">
-                  <h5 class="mt-0 mb-1">List-based media object</h5>
-                  Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin.
-                </div>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </section>-->
     <section>
       <div class="container">
-        <!--<div class="row">
-          <div class="col-12 text-center">
-            <h2>Latest Work</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia, et, placeat !</p>
-          </div>
-        </div>-->
 		 <div>
 			 <h2>What is a Neighbourhood Development Plan?</h2>
 			 <p>A Neighbourhood Development Plan is a framework developed by the community for guiding the future development, regeneration and conservation of an area. It is about the use and development of land and may contain a vision, aims, planning policies, proposals for improving the area, providing new facilities, or allocating key sites for specific kinds of development. It may deal with a wide range of social, economic and environmental issues (such as housing, employment, heritage and transport) or it may focus on one or two issues only. They can specify the design of buildings and protection of open space, development of schools, health, leisure and community facilities and infrastructureplans such as transport, walking and cycling provision and disabled access.</p>
@@ -122,9 +77,10 @@
 			<h2>Who's in the Steering Group</h2>
 			<ul>
 			<li>Noel Davis - Chairman</li>
-			<li>Sam Daubney - Vice Chairman, Website &amp; Social Media</li>
-			<li>Cassie Neville - Secretary</li>
-			<li>Malcolm Englishby - Finances</li>
+			<li>Sam Daubney - Vice Chairman</li>
+			<li>Chris Lea</li>
+      <li>Tom Littleford</li>
+			<li>Malcolm Englishby - Finances Only</li>
 			</ul>
 		</div>
 		<br />
